network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "defaultValue": "sf-apim-vnet",
      "type": "string"
    },
    "vnetAddressSpace": {
      "defaultValue": "172.16.0.0/20",
      "type": "string"
    },
    "apimSubnetName": {
      "defaultValue": "apim-subnet",
      "type": "string"
    },
    "sfSubnetName": {
      "defaultValue": "sf-subnet",
      "type": "string"
    },
    "apimSubnetSpace": {
      "defaultValue": "172.16.0.0/27",
      "type": "string"
    },
    "sfSubnetSpace": {
      "defaultValue": "172.16.2.0/23",
      "type": "string"
    },
    "apimNetworkSecurityGroupName": {
      "defaultValue": "apim-vnet-security",
      "type": "string"
    },
    "sfNetworkSecurityGroupName": {
      "defaultValue": "sf-vnet-security",
      "type": "string"
    }
  },
  "variables": {
    "location": "[string(resourceGroup().location)]",
    "vnetApiVersion": "2017-03-01",
    "sgApiVersion": "2017-03-01"
  },
  "outputs": {
    "vnet": {
      "type": "object",
      "value": "[reference(parameters('vnetName'))]"
    },
    "vnetVersion": {
      "type": "string",
      "value": "[variables('vnetApiVersion')]"
    },
    "vnetName": {
      "type": "string",
      "value": "[parameters('vnetName')]"
    },
    "sgVersion": {
      "type": "string",
      "value": "[variables('sgApiVersion')]"
    },
    "sfSubnetName": {
      "type": "string",
      "value": "[parameters('sfSubnetName')]"
    },
    "apimSubnetName": {
      "type": "string",
      "value": "[parameters('apimSubnetName')]"
    },
    "sfSgName": {
      "type": "string",
      "value": "[parameters('sfNetworkSecurityGroupName')]"
    },
    "apimSgName": {
      "type": "string",
      "value": "[parameters('apimNetworkSecurityGroupName')]"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('sfNetworkSecurityGroupName')]",
      "apiVersion": "[variables('sgApiversion')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AzurePortal",
            "properties": {
              "access": "Deny",
              "sourceAddressPrefix": "ServiceFabric",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "19080",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3900,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "ClientAPI",
            "properties": {
              "access": "Deny",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "19000",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3910,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "NodeToNode",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "19000",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3990,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "SFXClientAPI",
            "properties": {
              "access": "Deny",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "19080",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3920,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "Cluster",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "1025-1027",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3930,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "Ephemeral",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "49152-65534",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3940,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "Application",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "2000-3000",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3950,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "RDP",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389-3488",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3960,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "SSH",
            "properties": {
              "access": "Deny",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3970,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "CustomEndpoint",
            "properties": {
              "access": "Deny",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 3980,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "ResourceProvider",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "ServiceFabric",
              "destinationPortRange": "443",
              "destinationPortRanges": [],
              "direction": "Outbound",
              "priority": 4000,
              "protocol": "Tcp",
              "description": ""
            }
          },
          {
            "name": "DownloadBinaries",
            "properties": {
              "access": "Allow",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "sourcePortRanges": [],
              "destinationAddressPrefix": "AzureFrontDoor.FirstParty",
              "destinationPortRange": "",
              "destinationPortRanges": [ "443" ], 
              "direction": "Outbound",
              "priority": 4010,
              "protocol": "Tcp",
              "description": ""
            }
          }
        ]
      },
      "tags": {
        "resourceType": "Service Fabric"
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('apimNetworkSecurityGroupName')]",
      "apiVersion": "[variables('sgApiversion')]",
      "location": "[variables('location')]",
      "tags": {
        "resourceType": "API Management"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "apiVersion": "[variables('vnetApiversion')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('apimSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('apimSubnetSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('apimNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[parameters('sfSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('sfSubnetSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('sfNetworkSecurityGroupName'))]"
              }
            }
          }
        ],
        "virtualNetworkPeerings": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('apimNetworkSecurityGroupName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('sfNetworkSecurityGroupName'))]"
      ]
    }
  ]
}
